# Social-Gaming-App

./: .gitignore  .gitmodules  CMakeLists.txt  Coding Standard.md  README.md  workflow.md
docs/: DependencyDiagram.mdj  GameEngineLogic.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  ServerProperties.json  main.cpp  socialapp.html
src/Game/: CMakeLists.txt  Game.cpp
src/Game/include/: Game.h
src/GameGeneralConfig/: CMakeLists.txt  GameConfig.cpp
src/GameGeneralConfig/include/: GameConfig.h
src/GameParser/: CMakeLists.txt  GameParser.cpp  RulesParser.cpp
src/GameParser/include/: GameParser.h
src/GameServer/: CMakeLists.txt  GameServer.cpp
src/GameServer/include/: GameServer.h
src/GameServerConfiguration/: CMakeLists.txt  GameServerConfiguration.cpp
src/GameServerConfiguration/include/: GameServerConfiguration.h
src/GameSession/: CMakeLists.txt  GameSession.cpp
src/GameSession/include/: GameSession.h
src/GameSessionList/: CMakeLists.txt  GameSessionList.cpp
src/GameSessionList/include/: GameSessionList.h
src/GameSpec/: Add.cpp  BaseRule.cpp  CMakeLists.txt  Deal.cpp  Discard.cpp  Extend.cpp  ForEach.cpp  GameSpec.cpp  GlobalMessage.cpp  Inparallel.cpp  InputChoice.cpp  InputText.cpp  InputVote.cpp  Loop.cpp  Message.cpp  MessageParser.cpp  Parallelfor.cpp  Reverse.cpp  Scores.cpp  Shuffle.cpp  Sort.cpp  StateValueParser.cpp  StringEvaluation.cpp  Switch.cpp  Timer.cpp  When.cpp
src/GameSpec/include/: Add.h  AddVisitor.h  BaseRule.h  Deal.h  DealVisitor.h  Discard.h  DiscardVisitor.h  Extend.h  ExtendVisitor.h  ForEach.h  GameSpec.h  GameSpecHelper.h  GlobalMessage.h  Inparallel.h  InputChoice.h  InputText.h  InputVote.h  Loop.h  Message.h  MessageParser.h  MessageVisitor.h  Parallelfor.h  Reverse.h  ReverseVisitor.h  Scores.h  Shuffle.h  ShuffleVisitor.h  Sort.h  SortVisitor.h  StateValueParser.h  StringEvaluation.h  Switch.h  Timer.h  When.h
src/GameState/: CMakeLists.txt  GameState.cpp  StateValueBoolean.cpp  StateValueList.cpp  StateValueMap.cpp  StateValueNumber.cpp  StateValueString.cpp
src/GameState/include/: GameState.h  GameStateVisitor.h  StateValue.h  StateValueBoolean.h  StateValueList.h  StateValueMap.h  StateValueNumber.h  StateValueString.h
src/Games/: GlobalMessageTest.json  HelloWorld.json  RockPaperScissors.json  RuleShowcase.json
src/Invitation/: CMakeLists.txt  Invitation.cpp
src/Invitation/include/: Invitation.h
src/JSONGameValidator/: CMakeLists.txt  JSONValidator.cpp
src/JSONGameValidator/include/: JSONGameValidator.h
src/User/: CMakeLists.txt  User.cpp
src/User/include/: User.h
src/UserManager/: CMakeLists.txt  UserManager.cpp
src/UserManager/include/: UserManager.h
test/: CMakeLists.txt  GameSessionListTest.cpp  GameSessionTest.cpp  GameStateTest.cpp  GameTest.cpp  InvitationTest.cpp  UserManagerTest.cpp  UserTest.cpp
test/TestGames/: Test.json
